k8s/agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent
  template:
    metadata:
      labels:
        app: agent
    spec:
      containers:
      - name: agent
        image: ragazzo271985/gomon-agent:20250601-e73b43c
        volumeMounts:
        - name: agent-logs
          mountPath: /var/log
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
      - name: agent-logs
        emptyDir: {}
