k8s/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
  - host: victoria.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: victoria-metrics
            port:
              number: 8428
  - host: kibana.local
    http:
      paths:
      - path: /kibana(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kibana
            port:
              number: 5601
